[gd_scene load_steps=24 format=2]

[ext_resource path="res://DialogManager/Editor/CommandsTree.gd" type="Script" id=1]
[ext_resource path="res://DialogManager/Editor/GraphEdit.gd" type="Script" id=2]
[ext_resource path="res://DialogManager/Editor/FlowChartTab.gd" type="Script" id=3]
[ext_resource path="res://DialogManager/Editor/AddCommand.gd" type="Script" id=4]
[ext_resource path="res://DialogManager/Editor/CommandsSettings.gd" type="Script" id=5]
[ext_resource path="res://DialogManager/DialogCommands/Fork.gd" type="Script" id=6]
[ext_resource path="res://DialogManager/DialogCommands/CondSay.gd" type="Script" id=7]
[ext_resource path="res://DialogManager/DialogCommands/Jump.gd" type="Script" id=8]
[ext_resource path="res://DialogManager/DialogCommands/SetVar.gd" type="Script" id=9]
[ext_resource path="res://DialogManager/DialogCommands/Animation.gd" type="Script" id=10]
[ext_resource path="res://DialogManager/DialogCommands/ChangeUI.gd" type="Script" id=11]
[ext_resource path="res://DialogManager/DialogCommands/Say.gd" type="Script" id=12]
[ext_resource path="res://DialogManager/DialogCommands/Condition.gd" type="Script" id=13]
[ext_resource path="res://DialogManager/DialogCommands/Sound.gd" type="Script" id=14]

[sub_resource type="Resource" id=1]
script = ExtResource( 12 )
name = ""
say = ""
por_pos = "Right"
append_text = false

[sub_resource type="Resource" id=2]
script = ExtResource( 7 )
name = ""
say = ""
por_pos = "Right"
append_text = false
required_node = ""
required_var = ""
check_val = 0
condition_type = ""

[sub_resource type="Resource" id=3]
script = ExtResource( 10 )
animation_path = ""
animation_name = ""
custom_blend = -1.0
custom_speed = 1.0
from_end = false
anim_type = ""

[sub_resource type="Resource" id=4]
script = ExtResource( 6 )
choices = [  ]

[sub_resource type="Resource" id=5]
script = ExtResource( 13 )
required_node = ""
required_var = ""
check_val = 0
condition_type = ""

[sub_resource type="Resource" id=6]
script = ExtResource( 8 )
jump_index = 0

[sub_resource type="Resource" id=7]
script = ExtResource( 9 )
var_path = ""
var_name = ""
var_value = 0

[sub_resource type="Resource" id=8]
script = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
mix_target = 0
bus = "Master"

[sub_resource type="Resource" id=9]
script = ExtResource( 11 )
change_to_default = false

[node name="FlowChartTab" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
_graph_edit = NodePath("GraphContainer/GraphEdit")

[node name="InspectorTabContainer" type="TabContainer" parent="."]
margin_right = 358.0
margin_bottom = 564.0
size_flags_vertical = 3
tab_align = 0

[node name="Block Settings" type="VSplitContainer" parent="InspectorTabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 350, 0 )

[node name="InspectorVContainer" type="VBoxContainer" parent="InspectorTabContainer/Block Settings"]
margin_right = 350.0
margin_bottom = 134.0

[node name="inspectorHeader" type="Panel" parent="InspectorTabContainer/Block Settings/InspectorVContainer"]
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="inspectorHeaderHBoxContainer" type="HBoxContainer" parent="InspectorTabContainer/Block Settings/InspectorVContainer/inspectorHeader"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -1.90735e-06

[node name="AddCommand" type="MenuButton" parent="InspectorTabContainer/Block Settings/InspectorVContainer/inspectorHeader/inspectorHeaderHBoxContainer"]
margin_right = 106.0
margin_bottom = 29.0
text = "Add Command"
items = [ "Say Conmmand", null, 0, false, false, 0, 0, SubResource( 1 ), "", false, "Conditional Say Conmmand", null, 0, false, false, 1, 0, SubResource( 2 ), "", false, "Animation Command", null, 0, false, false, 2, 0, SubResource( 3 ), "", false, "Fork Command", null, 0, false, false, 3, 0, SubResource( 4 ), "", false, "Conditional Conmmand", null, 0, false, false, 4, 0, SubResource( 5 ), "", false, "Jump Conmmand", null, 0, false, false, 5, 0, SubResource( 6 ), "", false, "Set Variable Conmmand", null, 0, false, false, 6, 0, SubResource( 7 ), "", false, "Sound Conmmand", null, 0, false, false, 7, 0, SubResource( 8 ), "", false, "Change UI Conmmand", null, 0, false, false, 8, 0, SubResource( 9 ), "", false, "Say Conmmand", null, 0, false, false, 0, 0, null, "", false, "Conditional Say Conmmand", null, 0, false, false, 1, 0, null, "", false, "Animation Command", null, 0, false, false, 2, 0, null, "", false, "Fork Command", null, 0, false, false, 3, 0, null, "", false, "Conditional Conmmand", null, 0, false, false, 4, 0, null, "", false, "Jump Conmmand", null, 0, false, false, 5, 0, null, "", false, "Set Variable Conmmand", null, 0, false, false, 6, 0, null, "", false, "Sound Conmmand", null, 0, false, false, 7, 0, null, "", false, "Change UI Conmmand", null, 0, false, false, 8, 0, null, "", false ]
script = ExtResource( 4 )

[node name="CurrentBlock" type="Label" parent="InspectorTabContainer/Block Settings/InspectorVContainer/inspectorHeader/inspectorHeaderHBoxContainer"]
margin_left = 110.0
margin_top = 7.0
margin_right = 349.0
margin_bottom = 21.0
size_flags_horizontal = 3
align = 2

[node name="CommandsTree" type="Tree" parent="InspectorTabContainer/Block Settings/InspectorVContainer"]
margin_top = 34.0
margin_right = 350.0
margin_bottom = 134.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
select_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
_flowchart_tab = NodePath("../../../..")

[node name="CommandsSettings" type="Panel" parent="InspectorTabContainer/Block Settings"]
margin_top = 146.0
margin_right = 350.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="FlowChartSettings" type="PanelContainer" parent="InspectorTabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3

[node name="GraphContainer" type="VBoxContainer" parent="."]
margin_left = 370.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphHeader" type="Panel" parent="GraphContainer"]
margin_right = 646.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="GraphHeaderContainer" type="HBoxContainer" parent="GraphContainer/GraphHeader"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -1.90735e-06
alignment = 2

[node name="AddBlockButton" type="Button" parent="GraphContainer/GraphHeader/GraphHeaderContainer"]
margin_left = 569.0
margin_right = 645.0
margin_bottom = 29.0
text = "Add Block"

[node name="GraphEdit" type="GraphEdit" parent="GraphContainer"]
margin_top = 34.0
margin_right = 646.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_offset = Vector2( -200, 0 )
script = ExtResource( 2 )

[connection signal="item_activated" from="InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree" to="InspectorTabContainer/Block Settings/InspectorVContainer/CommandsTree" method="_on_CommandsTree_item_activated"]
[connection signal="pressed" from="GraphContainer/GraphHeader/GraphHeaderContainer/AddBlockButton" to="GraphContainer/GraphEdit" method="_on_AddBlockButton_pressed"]
